<resources>
    <string name="app_name">PruebaTecnica</string>
    <string name="txt_user">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="signup">Registro usuarios</string>
    <string name="validate_password">Repetir contraseña</string>
    <string name="btn_register">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>