<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="70dp"
        android:text="@string/signup"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/cst_secondary"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/txt_user"
        android:textColor="@color/cst_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/rounded_border_edittext"
        android:textColor="#5B5B5B"
        android:textSize="17sp"
        android:textStyle="bold"
        android:inputType="text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/txt_password"
        android:textColor="@color/cst_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/rounded_border_edittext"
        android:textColor="#5B5B5B"
        android:textSize="17sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/validate_password"
        android:textColor="@color/cst_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupValPassword"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/rounded_border_edittext"
        android:textColor="#5B5B5B"
        android:textSize="17sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUserSignUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btn_register"
        android:backgroundTint="@color/cst_primary"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>